<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:weightSum="1"
      android:id="@+id/linearLayout" android:layout_alignParentTop="true"
      android:layout_alignParentStart="true">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="0.04"
        android:weightSum="1" android:gravity="center_vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tw1"
          android:id="@+id/textView1"/>
      <EditText
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:inputType="numberSigned"
          android:ems="10"
          android:id="@+id/weightField"
          android:layout_weight="0.54" android:textAlignment="center"
          android:textIsSelectable="false" android:hint="@string/weight"/>
      <Switch
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/unitSwitcher" android:checked="false"
          android:clickable="true" android:showText="true"
          android:textOff="KG" android:textOn="LBS"
          android:layout_marginLeft="@dimen/activity_vertical_margin"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" android:layout_marginTop="40dp">
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tw2"
                android:id="@+id/textView2"
                android:layout_weight="0.04" android:textAlignment="center"
                android:textStyle="bold" android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>
      <RadioGroup
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" android:layout_weight="0.04"
          android:layout_gravity="center"
          android:foregroundGravity="fill_horizontal"
          android:orientation="horizontal" android:id="@+id/weightOnPlanet">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planetMoon"
            android:id="@+id/moonChoice"
            android:layout_weight="0.04" android:checked="true"
            android:enabled="true"/>
        <RadioButton android:layout_width="wrap_content"
                       android:layout_height="wrap_content" android:text="@string/planetMercury"
                       android:id="@+id/mercuryChoice"
                       android:layout_weight="0.04" android:checked="false"/>
        <RadioButton android:layout_width="wrap_content"
                       android:layout_height="wrap_content" android:text="@string/planetMars"
                       android:id="@+id/marsChoice" android:layout_weight="0.04"
                       android:checked="false"/>
        <RadioButton android:layout_width="wrap_content"
                       android:layout_height="wrap_content" android:text="@string/planetJupiter"
                       android:id="@+id/jupiterChoice" android:layout_weight="0.04"
                       android:checked="false"/>
      </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:layout_weight="0.10"
        android:gravity="center">
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/calculateButton"
          android:id="@+id/calculateButton" android:layout_gravity="left|center"
          android:enabled="true"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/eraseDatasButton"
          android:id="@+id/eraseDatasButton" android:clickable="true"
          android:enabled="true" android:layout_gravity="center|right"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" android:layout_weight="0.11">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/weightComputedResults"
          android:layout_gravity="center_horizontal"
          android:text="@string/weightComputingResults"
          android:visibility="invisible"/>
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
